--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 .header {
-	background-color: #556B2F;
+	background-color: #778899;
 	text-align: center;
 	margin-bottom: 20px;
 
@@ -30,7 +30,7 @@
 	padding: 20px;
 	border: 1px solid #ccc;
 	border-radius: 10px;
-	background-color: #556B2F;
+	background-color: #778899;
 	box-shadow: 1px 1px 5px #ccc;
 }
 
@@ -56,7 +56,7 @@ th, td {
 }
 
 th {
-	background-color: #f2f2f2;
+	background-color: #FAFAD2;
 	font-weight: bold;
 }
 img{
@@ -91,5 +91,5 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-	background-color: #555;
+	background-color: #D3D3D3;
 }
