--- a/style.css
+++ b/style.css
@@ -135,3 +135,35 @@ nav ul li a:hover {
     background-color: #f2f2f2;
   }
 </style>
+
+footer {
+  background-color: #f2f2f2;
+  padding: 40px 20px;
+}
+
+.footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.footer-left, .footer-right {
+  flex-basis: 50%;
+  padding: 10px;
+}
+
+.footer-left h3, .footer-right h3 {
+  color: #fff;
+}
+
+.footer-left p, .footer-right p {
+  color: #fff;
+}
+
+.footer-bottom {
+  text-align: center;
+  margin-top: 20px;
+  color: #fff;
+}
